<resources>
    <string name="app_name" translatable="false">Irani Tour</string>
    <string name="app_shoar" translatable="false">Irani Tour is your good companion :)</string>
    <string name="saved_locations" translatable="false">Saved locations</string>
    <string name="about_us" translatable="false">About us</string>
    <string name="setting" translatable="false">Setting</string>
    <string name="change_themes" translatable="false">Change Themes</string>
    <string name="open_drawer" translatable="false">Open Drawer</string>
    <string name="close_drawer" translatable="false">Close Drawer</string>
    <string name="iranology" translatable="false">Iranology</string>
    <string name="land_mark" translatable="false">Land Mark</string>
    <string name="profile" translatable="false">Profile</string>
    <string name="exit" translatable="false">Exit</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="retry" translatable="false">Retry...</string>
    <string name="next" translatable="false">Next</string>
    <string name="close" translatable="false">Close</string>
    <string name="no_internet" translatable="false">No Network Connection</string>
    <string name="full_name" translatable="false">Full Name</string>
    <string name="user_name" translatable="false">User Name</string>
    <string name="gmail" translatable="false">Gmail</string>
    <string name="password" translatable="false">Password</string>
    <string name="re_password" translatable="false">Confirm Password</string>
    <string name="sign_up" translatable="false">Sign Up</string>
    <string name="error_8_password" translatable="false">Password must be at least 8 characters long</string>
    <string name="password_not_match" translatable="false">Password does not match</string>
    <string name="fill_value" translatable="false">Please fill in all the values</string>
    <string name="enter_password" translatable="false">Please enter password</string>
    <string name="introduction" translatable="false">Introduction</string>
    <string name="introduction_details" translatable="false">The Iran Tourism app is designed and developed with the aim of introducing the culture, history, and tourist attractions of Iran. This app seeks to showcase the beauty and charm of Iran to both Iranian and international users.</string>
    <string name="our_mission" translatable="false">Our Mission</string>
    <string name="our_mission_details" translatable="false">Our mission is to enhance users\' awareness and knowledge about the history, culture, and tourist attractions of Iran. We strive to encourage users to travel and visit Iran\'s beautiful sites by providing accurate and engaging content.</string>
    <string name="our_team" translatable="false">Our Team</string>
    <string name="our_team_details" translatable="false">All team roles, including programming, designing, and writing, are carried out by Sajjad Sajoudi.</string>
    <string name="our_services" translatable="false">Our Services</string>
    <string name="our_services_details" translatable="false">We are always ready to hear your opinions, suggestions, and criticisms. You can contact us through the following ways:  Email: sajad.soojoodi@gmail.com</string>
    <string name="our_vision" translatable="false">Our Vision</string>
    <string name="our_vision_details" translatable="false">Our vision is to become the main and reliable source of tourism and cultural information about Iran in the world. With continuous updates and adding new content, we always strive to meet the satisfaction of our dear users.</string>
    <string name="east_azarbaijan" translatable="false">East Azarbaijan</string>
    <string name="west_azarbaijan" translatable="false">West Azarbaijan</string>
    <string name="ardabil" translatable="false">Ardabil</string>
    <string name="esfahan" translatable="false">Esfahan</string>
    <string name="alborz" translatable="false">Alborz</string>
    <string name="ilam" translatable="false">Ilam</string>
    <string name="bushehr" translatable="false">Bushehr</string>
    <string name="tehran" translatable="false">Tehran</string>
    <string name="chahar_mahal_bakhtiari" translatable="false">Chahar Mahal Bakhtiari</string>
    <string name="south_khorasan" translatable="false">South Khorasan</string>
    <string name="north_khorasan" translatable="false">North Khorasan</string>
    <string name="khorasan_razavi" translatable="false">Khorasan Razavi</string>
    <string name="khozestan" translatable="false">Khozestan</string>
    <string name="zanjan" translatable="false">Zanjan</string>
    <string name="semnan" translatable="false">Semnan</string>
    <string name="sistan_baluchistan" translatable="false">Sistan Baluchistan</string>
    <string name="fars" translatable="false">Fars</string>
    <string name="qazvin" translatable="false">Qazvin</string>
    <string name="qom" translatable="false">Qom</string>
    <string name="kurdistan" translatable="false">Kurdistan</string>
    <string name="kerman" translatable="false">Kerman</string>
    <string name="kermanshah" translatable="false">Kermanshah</string>
    <string name="kohgiloyeh_and_boyerahmad" translatable="false">Kohgiloyeh and Boyerahmad</string>
    <string name="golestan" translatable="false">Golestan</string>
    <string name="gilan" translatable="false">Gilan</string>
    <string name="lorestan" translatable="false">Lorestan</string>
    <string name="mazandaran" translatable="false">Mazandaran</string>
    <string name="markazi" translatable="false">Markazi</string>
    <string name="hormozgan" translatable="false">Hormozgan</string>
    <string name="hamedan" translatable="false">Hamedan</string>
    <string name="yazd" translatable="false">Yazd</string>
    <string name="entekhab_ostan" translatable="false">Select the desired province</string>
    <string name="edit" translatable="false">Edit</string>
    <string name="cancel" translatable="false">Cancel</string>
    <string name="edit_data" translatable="false">Information changed successfully</string>
    <string name="east_azarbaijan_detail" translatable="false">East Azerbaijan Province is one of the central provinces of Iran, boasting a plethora of tourist, historical, cultural, and industrial attractions. Its capital city, Tabriz, with a population of over one million, stands as one of Iran\'s largest cities and serves as the most important industrial and commercial center in the northwest of Iran. East Azerbaijan Province shares borders with West Azerbaijan Province to the north, Ardabil Province to the east, Zanjan Province to the south, and West Azerbaijan Province again to the west.\nThe province has a diverse climate, with parts being mountainous and cold, while others enjoy a semi-humid and moderate climate. Moreover, East Azerbaijan Province is home to areas with beautiful wetlands, lakes, and waterfalls such as Lake Urmia and Sahand Waterfall, which provide numerous tourist attractions for visitors.\nThe province is also significant in terms of industry and agriculture. Industries such as food processing, textiles, steel, automotive manufacturing, and petrochemicals play vital roles in the province\'s economy. Alongside industry, agriculture is well-developed in this province, with diverse productions of agricultural products including wheat, saffron, apples, and grapes.\nCulturally, East Azerbaijan Province boasts a rich history and culture. Its people speak Azerbaijani Turkish and adhere to their own traditions, music, and local arts. Each year, various festivals, exhibitions, and cultural activities are held in this province, contributing to the promotion of the region\'s culture and art.</string>
    <string name="west_azarbaijan_details" translatable="false">West Azerbaijan Province is one of the western provinces of Iran, covering an area of over 37,497 square kilometers, making it one of the largest provinces in Iran. It shares borders with East Azerbaijan Province to the north, Zanjan Province to the east, Hamedan and Kermanshah Provinces to the south, and Iraq to the west.\nThe capital of West Azerbaijan Province is Urmia, with a population of over 1.7 million, making it one of Iran\'s largest cities. Urmia serves as a melting pot of different cultures and boasts numerous tourist attractions, including Lake Urmia, the Urmia-Tehran highway, and Zarineh Sardasht Waterfall.\nWest Azerbaijan Province is recognized as one of the important agricultural regions of Iran. Its agricultural productions include wheat, barley, apples, walnuts, and grapes. Additionally, processing and food industries have developed in this province, playing a significant role in the regional economy.\nCulturally, West Azerbaijan Province has a rich history and culture. Its people speak Azerbaijani Turkish and cherish their traditions, music, and local arts. Every year, various festivals and cultural activities are held in this province, contributing to the promotion of the region\'s culture and art.</string>
    <string name="ardabil_details" translatable="false">Ardabil Province is one of the northwestern provinces of Iran, covering an area of over 18,031 square kilometers, making it one of the significant provinces in Iran. It shares borders with the Republic of Azerbaijan to the north, Gilan Province to the east, Zanjan Province to the south, and West Azerbaijan Province to the west.\nThe capital of Ardabil Province is Ardabil city, with a population of over 690,000, making it one of the major cities in northwest Iran. The city boasts numerous tourist attractions, including the shrine of Imamzadeh Ismail, the shrine of Imamzadeh Seyyed Ahmad, and Shorabil Waterfall.\nArdabil Province has a diverse climate, with cold winters and moderate summers. Its forests, lakes, and beautiful waterfalls are among the natural attractions that attract many tourists.\nTourism, agriculture, and animal husbandry are among the important economic activities in Ardabil Province. Its agricultural products include wheat, apples, cherries, and cabbage.\nCulturally, Ardabil Province has a rich cultural and historical heritage. Its people speak Azerbaijani Turkish and cherish their traditions, music, and local arts. Additionally, various cultural festivals and events are held in this province every year, contributing to the promotion of the region\'s culture and art</string>
    <string name="esfahan_details" translatable="false">Isfahan Province is one of the central provinces of Iran, covering an area of over 107,000 square kilometers, making it one of the largest provinces in the country. It shares borders with Qazvin and Semnan Provinces to the north, Kohgiluyeh and Boyer-Ahmad Province to the east, Chaharmahal and Bakhtiari Province to the south, and Lorestan Province to the west.\nThe capital of Isfahan Province is Isfahan city, with a population of over 5 million, making it one of the largest and most important cities in Iran. Isfahan is an ancient city with abundant cultural and historical heritage, including the Jameh Mosque of Isfahan, Fin Garden, and Naqsh-e Jahan Square.\nIsfahan Province has a diverse climate, with hot summers and moderate winters. It boasts numerous natural attractions such as the Central Desert, beautiful valleys, and waterfalls.\nThe economy of Isfahan Province is thriving due to the presence of heavy industries, agriculture, and handicrafts. Steel production, automotive manufacturing, petrochemicals, and agricultural products are among the important economic activities in this province.  Culturally, Isfahan Province has a rich history and culture. Isfahan is known as the cultural capital of Iran, attracting thousands of tourists from around the world each year to enjoy its cultural and historical beauties.</string>
</resources>