<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".fragments.navigation.drawer.AboutUsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_marginTop="32dp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_us" />
            <com.google.android.material.card.MaterialCardView
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_height="wrap_content"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="130dp"
                        android:orientation="horizontal">

                        <View
                            android:layout_width="5dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="1dp"
                            android:background="@color/blue" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="4dp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/shabnam_medium"
                                android:text="@string/introduction"
                                android:textColor="?attr/colorOnPrimary"
                                android:textSize="16dp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/shabnam_medium"
                                android:text="@string/introduction_details"
                                android:textColor="?attr/colorOnPrimary"
                                android:textSize="14dp" />

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="130dp"
                        android:layout_marginTop="16dp"
                        android:orientation="horizontal">

                        <View
                            android:layout_width="5dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="1dp"
                            android:background="@color/blue" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="4dp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/shabnam_medium"
                                android:text="@string/our_mission"
                                android:textColor="?attr/colorOnPrimary"
                                android:textSize="16dp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/shabnam_medium"
                                android:text="@string/our_mission_details"
                                android:textColor="?attr/colorOnPrimary"
                                android:textSize="14dp" />

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="90dp"
                        android:layout_marginTop="16dp"
                        android:orientation="horizontal">

                        <View
                            android:layout_width="5dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="1dp"
                            android:background="@color/blue" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="4dp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/shabnam_medium"
                                android:text="@string/our_team"
                                android:textColor="?attr/colorOnPrimary"
                                android:textSize="16dp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/shabnam_medium"
                                android:text="@string/our_team_details"
                                android:textColor="?attr/colorOnPrimary"
                                android:textSize="14dp" />

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="110dp"
                        android:layout_marginTop="16dp"
                        android:orientation="horizontal">

                        <View
                            android:layout_width="5dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="1dp"
                            android:background="@color/blue" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="4dp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/shabnam_medium"
                                android:text="@string/our_services"
                                android:textColor="?attr/colorOnPrimary"
                                android:textSize="16dp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/shabnam_medium"
                                android:text="@string/our_services_details"
                                android:textColor="?attr/colorOnPrimary"
                                android:textSize="14dp" />

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:layout_marginTop="16dp"
                        android:orientation="horizontal">

                        <View
                            android:layout_width="5dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="1dp"
                            android:background="@color/blue" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="4dp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/shabnam_medium"
                                android:text="@string/our_vision"
                                android:textColor="?attr/colorOnPrimary"
                                android:textSize="16dp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/shabnam_medium"
                                android:text="@string/introduction_details"
                                android:textColor="?attr/colorOnPrimary"
                                android:textSize="14dp" />

                        </LinearLayout>

                    </LinearLayout>


                </LinearLayout>


            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

    </ScrollView>



</FrameLayout>